# manim-ds

./: LICENSE  pyproject.toml
manim_ds/: constants.py
manim_ds/m_collection/: m_array.py  m_collection.py  m_stack.py
manim_ds/m_graph/: m_graph.py
manim_ds/m_variable/: m_variable.py
manim_ds/utils/: utils.py
tests/: test_marray.py  test_mgraph.py  test_mstack.py
